--- a/Session1/index.html
+++ b/Session1/index.html
@@ -13,7 +13,7 @@
         <p>Our plant-based range of milks supplied by our partner, Vitasoy, are perfect for those who are lactose intolerant, vegan or simply prefer to have dairy free alternatives and live a balanced lifestyle. They are made with quality Australian ingredients grown in fertile soils by Aussie farmers.</p>
         <br>
         <p>Our plant-based milks use natures ingredients that are transformed into milk allowing the coffee beans to be the hero flavour and they are formulated to make the perfect froth for barista coffee. That’s why they taste so good!</p>
-        <img width="50%" src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG">
+        <img width="50%" src="https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.JPG" alt="coffe cup">
     </div>
 </body>
 </html>
