--- a/Session2/Task1/index.html
+++ b/Session2/Task1/index.html
@@ -9,7 +9,7 @@
 <body>
     <table border="1">
         <tr>
-            <td><img width="150px" src="https://cdn.logo.com/hotlink-ok/logo-social.png"></td>
+            <td><img width="150px" src="https://cdn.logo.com/hotlink-ok/logo-social.png" alt="logo"></td>
             <td colspan="3"><h2 style="color: rgb(206, 40, 40);">Company Name</h2></td>
         </tr>
         <tr>
@@ -20,11 +20,11 @@
         </tr>
         <tr>
             <td><div  style="background-color: orange; width: 200px; height: 100px;;;"></div></td>
-            <td colspan="3"><div style="background-color: orange; "><img src="img1.PNG"></div></td>
+            <td colspan="3"><div style="background-color: orange; "><img src="img1.PNG" alt="workplace"></div></td>
         </tr>
         <tr>
             <td bgcolor="pink"></td>
-            <td bgcolor="pink"><img width="150px" src="https://cdn.logo.com/hotlink-ok/logo-social.png"></td>
+            <td bgcolor="pink"><img width="150px" src="https://cdn.logo.com/hotlink-ok/logo-social.png" alt="logo"></td>
             <td bgcolor="pink"colspan="2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sit obcaecati. Repellendus obcaecati architecto vel ratione? Necessitatibus autem, unde nulla rerum dicta quisquam voluptatum, reprehenderit cum odit illo enim modi.</td>
         </tr>
         <tr>
